crates/cli/tests/snapshots/lib__check@non_function_import.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/non_function_import.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/non_function_import.nemo
---
success: false
exit_code: 1
----- stdout -----
[18] Error: Can't import a non-function value. internal is of type I32
   ╭─[ tests/check/non_function_import.nemo:1:19 ]
   │
 1 │ import internal : I32 from external
   │                   ──┬─  
   │                     ╰─── Can't import a non-function value. internal is of type I32
───╯


----- stderr -----
Error: "Check failed with 1 errors"
